Re-styling for correct chart collapse and calculator positioning.

--- a/src/app/components/Calculators/EventingCalculator/calculator/calculator.component.css
+++ b/src/app/components/Calculators/EventingCalculator/calculator/calculator.component.css
@@ -2,7 +2,6 @@
   display: grid;
   justify-content: center;
   align-content: center;
-  min-height: 100vh;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: minmax(100px, auto) repeat(5, 100px);
 }
@@ -21,10 +20,4 @@
 
 .span-two {
   grid-column: span 2;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
